# GoGreen

./: MANIFEST.in  README.md  pyproject.toml  setup.py
gogreen/: hooks.py  modules.txt
gogreen.egg-info/: PKG-INFO  SOURCES.txt
gogreen/config/: desktop.py  docs.py
gogreen/gogreen/report/cluster_wise_account_receivable_report/: cluster_wise_account_receivable_report.js  cluster_wise_account_receivable_report.json  cluster_wise_account_receivable_report.py
gogreen/gogreen/report/grandparent_name_wise_account_receivable_report/: grandparent_name_wise_account_receivable_report.js  grandparent_name_wise_account_receivable_report.json  grandparent_name_wise_account_receivable_report.py
gogreen/gogreen/report/greatgrandparent_name_wise_account_receivable_report/: greatgrandparent_name_wise_account_receivable_report.js  greatgrandparent_name_wise_account_receivable_report.json  greatgrandparent_name_wise_account_receivable_report.py
gogreen/gogreen/report/parent_wise_account_receivable_report/: parent_wise_account_receivable_report.js  parent_wise_account_receivable_report.json  parent_wise_account_receivable_report.py
gogreen/gogreen/report/sales_invoice_report/: sales_invoice_report.js  sales_invoice_report.json  sales_invoice_report.py
gogreen/gogreen/report/tower_wise_account_receivable_report/: tower_wise_account_receivable_report.js  tower_wise_account_receivable_report.json  tower_wise_account_receivable_report.py
