[project]
name = "gogreen"
authors = [
    { name = "Jyoti", email = "jyoti@gmail.com" }
]
description = "For Gogreen"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# 🔴 REQUIRED BY BENCH
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

# Optional: dev-only dependencies
[tool.bench.dev-dependencies]
# black = "~=24.0"
# pytest = "~=8.0"

